whitespace fix

--- a/_sass/nav_page_snake.scss
+++ b/_sass/nav_page_snake.scss
@@ -21,7 +21,8 @@ nav.nav-page-snake {
     padding-bottom: 1em;
     -webkit-column-break-inside: avoid;
     page-break-inside: avoid;
-    break-inside: avoid;  }
+    break-inside: avoid;
+  }
   a {
     display: block;
     margin: 0;
